crates/uitest/fixtures/parser/for_.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: fixtures/parser/for_.fe
---
error[1-0001]: expected `in`
  ┌─ for_.fe:2:6
  │
2 │ for i arr { }
  │      ^ expected `in`

error[1-0001]: expected pattern
  ┌─ for_.fe:4:5
  │
4 │ for in arr { }
  │     ^ expected pattern

error[1-0001]: expected pattern
  ┌─ for_.fe:6:5
  │
6 │ for @ in arr {}
  │     ^ expected pattern

error[1-0001]: unexpected syntax while parsing pattern
  ┌─ for_.fe:6:5
  │
6 │ for @ in arr {}
  │     ^ unexpected

error[1-0001]: expected pattern
  ┌─ for_.fe:8:5
  │
8 │ for @ in arr x y {}
  │     ^ expected pattern

error[1-0001]: unexpected syntax while parsing pattern
  ┌─ for_.fe:8:5
  │
8 │ for @ in arr x y {}
  │     ^ unexpected

error[1-0001]: unexpected syntax while parsing `for` statement
  ┌─ for_.fe:8:14
  │
8 │ for @ in arr x y {}
  │              ^^^ unexpected
